tests/errors/examples/nested_call.vg
<view name="test">
  <div>{numberToString(numberToString(count))}</div>
</view>
